--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     obj.style.height = obj.contentWindow.document.documentElement.scrollHeight + 'px';
   }
   
+</script>
+	
 
 <style type="text/css">
 
